@startuml Diagram

' !include gym.plantuml
' remove gym.spaces
' TODO: There must be a simpler way to only keep a single node, right?
!include settings.plantuml
remove settings.active
remove settings.assumptions
remove settings.passive
remove SettingABC
remove SettingABC


package methods {

    package baseline_method {
        class BaselineMethod implements Method {
            + hparams: BaselineModel.HParams
            + config: Config
            + trainer_options: TrainerConfig
            + trainer: Trainer
        }
    }
    
    !include baseline_model.plantuml

    package aux_tasks{
        package auxiliary_task {
            abstract class AuxiliaryTask {
                + options: AuxiliaryTask.Options
                + get_loss(ForwardPass, Actions, Rewards): Loss
                
            }
            abstract class AuxiliaryTask.Options {
                + coefficient: float
            }
            EpisodicA2C *-- EpisodicA2C.HParams
        }

        package simclr {
            class SimCLRTask implements AuxiliaryTask {
                + options: SimCLRTask.Options
            
            }
            class SimCLRTask.Options extends AuxiliaryTask.Options {

            }
        }

        SelfSupervisedModel "1" o-- "many" AuxiliaryTask
    }
    

    package models {
        class ForwardPass extends Batch {
            + observations: Observations
            + representations: Tensor
            + actions: Actions
        }
    
        !include baseline_model.plantuml
        
        !include output_heads.plantuml
    }
@enduml


@startuml models

@enduml